Se agrega un cambio

--- a/framer.html
+++ b/framer.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="./styles/global-styles.css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-	<title>Framer</title>
+	<title>Framework</title>
 </head>
 <body>
 	<table>
